[enh] add bin field in package.json for local/global installs

--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   "license": "MIT",
   "dependencies": {
     "systeminformation": "^4.0.15"
+  },
+  "bin": {
+    "batinfo": "./index.js"
   }
 }
