--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
   "name": "batinfo",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A simple utility that displays minimal battery information.",
   "repository": {
     "type": "git",
     "url": "https://www.github.com/jaffrey98/batinfo.git"
   },
-  "keywords": ["battery", "charge", "battery information", "charge remaining", "battery status"],
+  "keywords": [
+    "battery",
+    "charge",
+    "battery information",
+    "charge remaining",
+    "battery status"
+  ],
   "homepage": "https://www.github.com/jaffrey98/batinfo#readme",
   "main": "index.js",
   "scripts": {
